--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "gzippo": "^0.2.0"
   },
   "devDependencies": {
+    "bower": "^1.3.8",
     "grunt": "~0.4.1",
     "grunt-autoprefixer": "~0.4.0",
     "grunt-bower-install": "~1.0.0",
