--- a/bower.json
+++ b/bower.json
@@ -12,7 +12,8 @@
     "angular-sanitize": "1.2.15",
     "angular-route": "1.2.15",
     "angular-ui": "~0.4.0",
-    "angular-ui-bootstrap-bower": "~0.11.0"
+    "angular-ui-bootstrap-bower": "~0.11.0",
+    "angular-local-storage": "~0.1.5"
   },
   "devDependencies": {
     "angular-mocks": "1.2.15",
